@@ -405,7 +405,7 @@ class SIM_API cStdDev : public cStatistic
 
 /**
  * Statistics class to collect doubles and calculate weighted statistics
- * of them.
+ * of them. It can be used for example to calculate time average. 
  *
  * @ingroup Statistics
  */
