@@ -1,3 +1,7 @@
+2001-08-04 Andras Varga
+
+	* index.h: added doc comments
+
 2001-08-03 Andras Varga
 
 	* ccor.h cdetect.h cgate.h cmodule.h cobject.h cpar.h csimul.h cstk.h:
